--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <div>
             <h1>登入：</h1>
             <div class="btn">
-                <a href="./login/login2.html">樣式一</a>
+                <a href="./login/login2.html">樣式一 - yellow</a>
             </div>
             <div class="btn">
                 <a href="./login/login3.html">樣式二</a>
             </div>
             <div class="btn">
-                <a href="./login/login4.html">樣式三</a>
+                <a href="./login/login4.html"><span style="color: red">* </span> 樣式三 - purple</a>
             </div>
             <div class="btn">
                 <a href="./login/login5.html">樣式四</a>
@@ -66,23 +66,27 @@
                 <a href="./booking/main2.html">樣式一</a>
             </div>
             <div class="btn">
-                <a href="./booking/main3.html">樣式二</a>
+                <a href="./booking/main3.html"><span style="color: red">* </span> 樣式二</a>
             </div>
             <div class="btn">
                 <a href="./booking/main4.html">樣式三</a>
             </div>
+            <div class="btn">
+                <a href="./booking/main6.html"><span style="color: red; font-weight: 400;" >New </span> 樣式四</a>
+            </div>
         </div>
         <div>
-            <h1>黃色版日曆：</h1>
+            <h1>DEMO：
+            </h1>
             <div class="btn">
-                <a href="./booking/main5.html">樣式一</a>
+                <a href="./booking/main5.html">登入樣式三 ＋ 日曆樣式二</a>
             </div>
             <div class="btn">
-                <a href="./booking/main6.html">樣式二</a>
+                <a href="./booking/main6.html">登入樣式一 ＋ 日曆樣式四</a>
             </div>
-            <div class="btn">
+            <!-- <div class="btn">
                 <a href="./booking/main7.html">樣式三</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
