--- a/demo/demo_login2.html
+++ b/demo/demo_login2.html
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                     <div class="login_form_div">
-                        <form class="login_form">
+                        <form class="login_form" action="../booking/main6.html">
                             <div class="login_header_title">成果行銷 | 預約會議室</div>
                             <div class="login_block">
                                 <div class="login_block_content">
@@ -222,7 +222,7 @@
                                         <label for="pwd">密碼</label>
                                     </div>
                                     <div>
-                                        <a href="../booking/main6.html"><button class="btn_login" type="submit">登入</button></a>
+                                        <button class="btn_login" type="submit">登入</button>
                                     </div>
                                 </div>
                             </div>
