--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <h1>DEMO：
             </h1>
             <div class="btn">
-                <a href="./booking/main5.html">登入樣式三 ＋ 日曆樣式二</a>
+                <a href="./demo/demo_login2.html">登入樣式三 ＋ 日曆樣式二</a>
             </div>
             <div class="btn">
-                <a href="./booking/main6.html">登入樣式一 ＋ 日曆樣式四</a>
+                <a href="./demo/demo_login4.html">登入樣式一 ＋ 日曆樣式四</a>
             </div>
             <!-- <div class="btn">
                 <a href="./booking/main7.html">樣式三</a>
